[gd_scene load_steps=4 format=3 uid="uid://bd4r15lhakuu6"]

[ext_resource type="Script" uid="uid://cyyts3sqwkjt8" path="res://scripts/gui/create_world.gd" id="1_3knyx"]
[ext_resource type="ButtonGroup" uid="uid://c3fcmmd5abwwx" path="res://assets/other/button groups/difficulty_buttons.tres" id="2_y874x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jvwe7"]

[node name="CreateWorld" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_3knyx")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -20.0
offset_right = 54.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Create World"
horizontal_alignment = 1

[node name="WorldName" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/WorldName"]
layout_mode = 2
text = "Name:"

[node name="Name" type="TextEdit" parent="CenterContainer/VBoxContainer/WorldName"]
layout_mode = 2
size_flags_horizontal = 3
localize_numeral_system = false
scroll_fit_content_height = true

[node name="WorldSeed" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/WorldSeed"]
layout_mode = 2
text = "Seed:
"

[node name="Seed" type="TextEdit" parent="CenterContainer/VBoxContainer/WorldSeed"]
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="WorldDifficulty" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Normal" type="Button" parent="CenterContainer/VBoxContainer/WorldDifficulty"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/pressed = SubResource("StyleBoxTexture_jvwe7")
toggle_mode = true
button_group = ExtResource("2_y874x")
text = "Normal
"

[node name="Nightmare" type="Button" parent="CenterContainer/VBoxContainer/WorldDifficulty"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("2_y874x")
text = "Nightmare
"

[node name="Masochist" type="Button" parent="CenterContainer/VBoxContainer/WorldDifficulty"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_group = ExtResource("2_y874x")
text = "Masochist
"

[node name="MenuAction" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer/MenuAction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back
"

[node name="Create" type="Button" parent="CenterContainer/VBoxContainer/MenuAction"]
layout_mode = 2
size_flags_horizontal = 3
text = "Create
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuAction/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuAction/Create" to="." method="_on_create_pressed"]
